<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charlesanderson.streamline.AddTimerFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeButton"
        android:layout_alignEnd="@+id/timeButton"
        android:layout_alignStart="@+id/colorButton"
        android:layout_marginBottom="20dp"
        android:hint="@string/task_name"
        android:inputType="text"
        android:textSize="14sp" />

    <Button
        android:textColor="#ffffff"
        android:id="@+id/timeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorAccent"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:layout_marginStart="129dp"
        android:layout_alignBaseline="@+id/colorButton"
        android:layout_alignBottom="@+id/colorButton"
        android:layout_alignStart="@+id/radioGroup" />

    <Button
        android:textColor="#ffffff"
        android:id="@+id/colorButton"
        android:background="@color/colorAccent"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/set_color"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup" />

    <Button
        android:id="@+id/addTaskButton"
        android:textSize="20sp"
        android:background="@drawable/gradient_button_shape"
        android:textColor="#ffffff"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/add_task"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="23dp"
        android:shadowColor="#39FAD7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/defaultCheckedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:layout_above="@+id/addTaskButton"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/defaultCheckedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_and_urgent"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_but_not_urgent"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_important_but_urgent"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_important_and_not_urgent"/>
    </RadioGroup>




</RelativeLayout>
