<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charlesanderson.streamline.TimerClockFragment">

    <TextView
        android:id="@+id/taskNameClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/task_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/countdownTimer"
        android:layout_below="@id/taskNameClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/timeTextStart"/>
    
    <com.eralp.circleprogressview.CircleProgressView
        android:id="@+id/circularProgressViewSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pause_button"
        android:src="@mipmap/ic_pause_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"

 />

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stop_button"
        android:src="@mipmap/ic_stop_black_24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
         />

</RelativeLayout>
