<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/startStopButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/taskName"
                android:contentDescription="@string/play_pause_button"
                android:src="@mipmap/ic_play_arrow_black_24dp" />

            <TextView
                android:id="@+id/timeElapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="70dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:hint="@string/timeStart"
                android:inputType="none" />

            <TextView
                android:id="@+id/timeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="30dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:enabled="false"
                android:hint="@string/timeStart"
                android:inputType="none" />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/task"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/timerBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="328dp"
                android:layout_height="40dp"
                android:layout_below="@id/taskName"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/startStopButton"
                android:background="@color/material_color_cyan_500" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>